# calendar

./: Cargo.toml  Makefile  README.md  build_deb.sh  config.toml.example  module.toml
.github/workflows/: build.yml
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: CalendarApp.tsx  CalendarCalDavSettings.tsx  CalendarCreateMenu.tsx  CalendarEventsWidget.tsx  CalendarFilterPanel.tsx  CalendarImportModal.tsx  CalendarLogo.tsx  CalendarMiniPanel.tsx  CalendarNewActions.tsx  CalendarNotificationWorker.tsx  CalendarSettingsPage.tsx  CalendarSidebarBody.tsx  CalendarToolbar.tsx  CalendarWeatherWidget.tsx  ModuleSettingsForm.tsx  WeatherSettings.tsx  api.ts  calendar.css  entry.ts  i18n.ts  index.css  store.ts
migrations/: 000001_calendar_schema.down.sql  000001_calendar_schema.up.sql  000002_calendar_attendees.down.sql  000002_calendar_attendees.up.sql  000003_calendar_scheduling.down.sql  000003_calendar_scheduling.up.sql  000004_calendar_weather.down.sql  000004_calendar_weather.up.sql  000005_event_color.down.sql  000005_event_color.up.sql
src/: main.rs  state.rs
src/config/: settings.rs
src/errors/: mod.rs
src/events/: publisher.rs
src/handlers/: analytics.rs  attendees.rs  calendars.rs  events.rs  health.rs  import_export.rs  mcp.rs  mod.rs  public.rs  scheduling.rs  time_blocks.rs  weather.rs
src/handlers/caldav/: mod.rs
src/middleware/: mod.rs
src/models/: attendee.rs  calendar.rs  event.rs  mod.rs  scheduling.rs  time_block.rs
src/router/: mod.rs
src/services/: analytics_service.rs  availability_service.rs  calendar_service.rs  event_service.rs  icalendar_service.rs  mod.rs  recurrence_service.rs  reminder_service.rs  scheduling_service.rs  time_block_service.rs  weather_service.rs
