[package]
name        = "kubuno-calendar"
version     = "0.1.2"
edition     = "2021"
description = "Kubuno Calendar — module calendriers et événements"
license     = "AGPL-3.0"
repository  = "https://github.com/kubuno/calendar"

[[bin]]
name = "kubuno-calendar"
path = "src/main.rs"

[dependencies]
# Dépendances tierces (versions issues du workspace du monorepo, inlinées pour un
# build autonome — voir kubuno/core pour la référence centrale).
tokio              = { version = "1",    features = ["full"] }
axum               = { version = "0.7",  features = ["macros", "ws", "multipart"] }
tower              = { version = "0.5",  features = ["full"] }
tower-http         = { version = "0.6",  features = ["cors", "compression-gzip", "trace", "limit", "fs", "set-header", "timeout"] }
async-trait        = "0.1"
sqlx               = { version = "0.8",  features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "tls-rustls", "bigdecimal"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json", "stream", "multipart"] }
config             = "0.14"
dotenvy            = "0.15"
validator          = { version = "0.18", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter", "json"] }
thiserror          = "1"
anyhow             = "1"
uuid               = { version = "1",    features = ["v4", "serde"] }
chrono             = { version = "0.4",  features = ["serde"] }
bytes              = "1"
futures            = "0.3"
rand               = "0.8"
base64             = "0.22"
sha2               = "0.10"
toml               = "0.8"
clap               = { version = "4",    features = ["color", "wrap_help", "derive", "env"] }
hex                = "0.4"

# Spécifique calendrier
rrule      = "0.12"
icalendar  = "0.16"
chrono-tz  = { version = "0.10", features = ["serde"] }

# Crate partagée du core, consommée via une dépendance git taguée sur kubuno/core.
# (Dev local hors-ligne possible via `[patch]` ci-dessous, décommenté au besoin.)
kubuno-seccomp = { git = "https://github.com/kubuno/core", tag = "seccomp-v0.1.0", package = "kubuno-seccomp" }

# Pour développer hors-ligne avec un checkout voisin de kubuno/core, décommenter :
# [patch."https://github.com/kubuno/core"]
# kubuno-seccomp = { path = "../kubuno-core/crates/kubuno-seccomp" }
